#+AUTHOR: AUCTeX Maintenance Team
#+LANGUAGE: en
#+OPTIONS: num:nil toc:nil
# Copyright (C) 2024 Free Software Foundation, Inc.
# License: GNU General Public License 3
# The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]]

* [Unreleased]

** Added

- Add new support files =style/authblk.el=, =style/langscibook.cls=,
  =style/ninecolors.el=, =style/supertabular.el=, =style/tabularray.el=
  and =style/xtab.el=.

** Changed

- AUCTeX 13.3 marks the last standalone tarball release.  From now on,
  AUCTeX releases are made available through the
  [[https://elpa.gnu.org/packages/auctex.html][Emacs Lisp Package
  Archive (ELPA)]].  Distro packagers are encouraged to use the ELPA
  packages as-is and install them under one of the new Emacs locations
  for system-wide packages, see ~package-directory-list~.

  At the same time, development is now done on the =main= branch and the
  =master= branch has been deleted.  Its last state has been pushed as
  =auctex-13= branch for archiving purposes but it won't get any updates
  anymore.

  For users who tracked the master branch: Do =git switch main= to
  switch to the main branch where development takes place nowadays.

* [14.0.6] - 2024-06-30

** Added

- Complete support for in-buffer completion of color support macros.
- Add new support files =style/contract.el=, =style/diagbox.el= and
  =style/standalone.el=.

** Fixed

- Add appropriate ~delete-selection~ properties for
  ~LaTeX-insert-left-brace~, ~TeX-insert-dollar~ and
  ~TeX-insert-backslash~ that differentiate between the "electric" and
  "just-insert-the-symbol" behavior.  That should simplify cooperation
  with other electric modes.

  As a result of this adjustment, the behavior of ~TeX-insert-dollar~
  is affected in some ways:
  - With raw prefix argument =C-u=, =$= (~TeX-insert-dollar~) now
    inserts four dollars as opposed to one.  This behavior is in-line
    with other symbols, in particular ="= (~TeX-insert-quote~) and =\=